# aula_assistant

./: .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0-security_vulnerability.md  1-bug_report.md  2-feature-request.md  config.yaml
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/logger/: Cargo.toml
src-tauri/crates/logger/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_data.rs  lib.rs  main.rs
src/components/: text-utils.tsx
src/components/layout/appbar/: icons.tsx  index.tsx  trafic-lights.tsx
src/contexts/: window.tsx
