[workspace]
resolver = "2"
members = ["crates/logger"]

[workspace.dependencies]
logger = { path = "crates/logger" }

[package]
name = "aula_assistant"
version = "0.1.0"
edition = "2021"

[lib]
name = "aula_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.39", features = ["cargo"] }
logger = { workspace = true}
